# fhe-fingerprinting

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  automated_test.py  build_and_run.sh  build_main.sh  data_synthesis.py  final-main  final_main.cpp  log_for_30_datasets.txt  log_till_cosinez_similarities.txt  main.cpp  main.py  new-main  new-main.cpp  plan.md  pyproject.toml  understanding_ckks  understanding_ckks.cpp  view_data.ipynb  working-log.txt
datasets/dataset_1/: query_vector.npy  storage_vectors.npy
datasets/dataset_10/: query_vector.npy  storage_vectors.npy
datasets/dataset_2/: query_vector.npy  storage_vectors.npy
datasets/dataset_3/: query_vector.npy  storage_vectors.npy
datasets/dataset_4/: query_vector.npy  storage_vectors.npy
datasets/dataset_5/: query_vector.npy  storage_vectors.npy
datasets/dataset_6/: query_vector.npy  storage_vectors.npy
datasets/dataset_7/: query_vector.npy  storage_vectors.npy
datasets/dataset_8/: query_vector.npy  storage_vectors.npy
datasets/dataset_9/: query_vector.npy  storage_vectors.npy
find_max/: find_max  find_max.cpp
harness/: compute_similarity.cpp  create_key.cpp  decrypt_result.cpp  encrypt_vectors.cpp  plaintext_similarity  plaintext_similarity.cpp
ranking_test/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build_test.sh  ranking_test  ranking_test.cpp
